--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,65 @@ body {
     padding: 8px 15px;
     border-radius: 5px;
 }
+.tableS {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
 
+.tableS th, .tableS td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.tableS th {
+    background-color: #f2f2f2;
+}
+
+.delete-btn {
+    background-color: #2f97d3;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+.tab2 {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.tab2 th, .tab2 td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.tab2 th {
+    background-color: #852222;
+}
+
+.tab2 tr:hover {
+    background-color: #f5f5f5;
+}
+
+.tab2 button {
+    background-color: #2f97d3;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.tab2 button:hover {
+    background-color: #2f97d3;
+}
 @media screen and (max-width: 600px) {
     .formR,
     .formR1 {
